test/zinc_source/compile_errors/operators/19_unsupported_membership_operator.zn
// expected-error: operator 'in' cannot be overloaded

struct Bag {
    value: i64

    fn operator in(candidate: i64) -> bool {
        return true
    }
}

fn main() {
    bag = Bag { value: 1 }
}
